pyrene/src/components/FormElements/Checkbox/checkbox.css
@import '../../../styles/colors.css';

.checkboxContainer {
  composes: commonFontSettings from '../../../styles/common.css';
  outline: none !important;
}

.checkbox {
  display: none;
}

.checkboxIcon {
  content: '';
  display: inline-block;
  width: 16px;
  height: 16px;
  vertical-align: text-top;
  margin-right: 6px;
}

.checkboxLabel {
  height: 24px;
  font-size: 14px;
  font-weight: normal;
  line-height: 1.71;
  text-transform: capitalize;
  cursor: pointer;

  display: flex;
  align-items: center;

  &.disabled {
    opacity: 0.5;
    pointer-events: none;
    &.checked {
      opacity: 1;
    }
  }

  &.required:after {
    content: '*';
    color: var(--red-500);
  }
}

